--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "serve": "^14.2.4",
     "styled-components": "^6.1.8",
     "three": "^0.161.0",
     "typewriter-effect": "^2.21.0",
@@ -34,7 +35,8 @@
     "start": "cross-env PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build -l 3005"
   },
   "eslintConfig": {
     "extends": [
